# OracleDB_MCP

./: README.md  pyproject.toml
src/oracle_mcp/: __init__.py  __main__.py  config.py  db.py  server.py
src/oracle_mcp/resources/: schema.py
src/oracle_mcp/tools/: ddl.py  dml.py  export.py  plsql.py  query.py
