[project]
name = "oracle-mcp"
version = "0.1.0"
description = "MCP Server for Oracle Database - exposes SQL, DML, DDL, PL/SQL, schema exploration, and data export as MCP tools and resources"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0.0",
    "oracledb>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
oracle-mcp = "oracle_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oracle_mcp"]


